tests/ui/cve_2020_35888_simplified/cve_2020_35888_simplified.stderr
error: dropped an possibly-uninitialized value
  --> tests/ui/cve_2020_35888_simplified/cve_2020_35888_simplified.rs:17:9
   |
LL |     let ptr: *mut DropDetector = unsafe { alloc(layout) as *mut DropDetector };
   |                                           ----------------------------------
   |                                           |
   |                                           memory allocated here
   |                                           a maybe-relative pointer created here
...
LL |         (*ptr) = DropDetector(12345);
   |         ^^^^^^
   |         |
   |         original value is dropped here
   |         the new value is assigned to here
   |
   = help: assigning to a dereferenced pointer will cause previous value to be dropped, and try using `ptr::write` instead
   = note: `#[deny(rpl::drop_uninit_value)]` on by default

error: aborting due to 1 previous error

